--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,13 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+permissions: {}
 
 jobs:
   build:
     timeout-minutes: 2
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -15,8 +18,10 @@ jobs:
           - "28.2"
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
-      - name: Setup Emacs ${{ matrix.emacs-version }}
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+      - name: Setup Emacs
         uses: purcell/setup-emacs@11969ffc35972d0aa1a439489e99b4b61a60917c
         with:
           version: ${{ matrix.emacs-version }}
